# jira-automation

./: Cargo.toml  README.md  releasebuild.sh
src/: main.rs
src/lib/: mod.rs
src/lib/commands/: mod.rs
src/lib/commands/compositions/: mod.rs
src/lib/commands/issues/: list_transition.rs  mod.rs  search_issues.rs  transition_issue.rs  update.rs
src/lib/commands/releases/: create.rs  delete.rs  list.rs  mod.rs  test_releases.rs  update.rs
src/lib/commands/releases/snapshots/: jira_automation__lib__commands__releases__list__tests__list_releases_paginated.snap  jira_automation__lib__commands__releases__list__tests__list_releases_unpaginated.snap
src/lib/util/: mod.rs
